<resources>
    <string name="app_name">Findar User</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="birthdate">Birthdate</string>
    <string name="cpassword">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create An Account</string>
    <string name="terms_and_condition">Terms &amp; Conditions</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend">Resend</string>
    <string name="continue_">Continue</string>
    <string name="create">Create</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email Address</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="reviews">Reviews</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="legal">Legal</string>
    <string name="work">Work</string>
    <string name="chat_message">Chat Message</string>
    <string name="your_name">Your Name</string>
    <string name="home_address">Home Address</string>
    <string name="work_address">Work Address</string>
    <string name="add_address">Add Address</string>
    <string name="physical_address">Physical Address</string>
    <string name="select_province">Select Province</string>
    <string name="province">Province</string>
    <string name="select_city">Select City</string>
    <string name="city">City</string>
    <string name="select_suburb">Select Suburb</string>
    <string name="suburb">Suburb</string>
    <string name="postal_code">Postal Code</string>


    <string name="recently_search">Recently Search</string>
    <string name="work1">Feeklokkie Cresent, Pretoriuspark, Pretoria</string>
    <string name="home1">155 west St. Sandown</string>
    <string name="set_date_time">Set Date And Time</string>
    <string name="set_date_time1">Would you like to service provider as soon as possible or schedule a time.</string>
    <string name="as_soon_possible">As Soon as Possible</string>
    <string name="schedules">Schedules</string>
    <string name="done">Done</string>
    <!--    <string name="choose_service">Choose Your Type Of Services</string>-->
    <string name="choose_service">Which Type Of Service Are You Looking For?</string>
    <string name="describe_problem">Describe Your Problem In Detail</string>
    <string name="describe_problem_content">The more information you give us the better your service provider will be able to assist you.</string>

    <string name="do_you_want_add_order_bo" type="id">Do you want to add an order number?</string>
    <string name="demo_content" type="id">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oficia deserunt mollit anim id est laborum.</string>

    <!--    <string name="choose_service1">Select your service to proceed with Finder</string>-->
    <string name="choose_service1">Select the service provider that you need.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="what_is_your_location">Enter your location here </string>
    <string name="set_location_on_map">Set location on map</string>
    <!--<string name="create_account_content">Dont have an account please fill detail and register your account.</string>-->
    <!--    <string name="homepage_content">Choose well experience plumber</string>-->
    <string name="homepage_content">Click the + to find a service provider</string>
    <string name="hi">Hi</string>

    <string name="create_account_content">Dont have an account please fill detail \n and register your account.</string>
    <!--<string name="homepage_content">Choose well experience plumber</string>-->
    <string name="homepage_content1">Set location so we come and solve your problem</string>
    <string name="create_account_content1">You are register with findar?</string>
    <string name="signup_content">Please enter your Phone Number, We will send OTP to your mobile.</string>
    <string name="terms_content">Read our terms and conditions and continue or back</string>
    <string name="terms_content1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempo incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco aboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,</string>
    <string name="terms_content2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempo incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco aboris nisi ut aliquip </string>
    <string name="readmore">Read More</string>
    <string name="otp_content">Please enter OTP that was sent on your phone number</string>
    <string name="login_content">Please login your account to continue with Findar.</string>
    <string name="login_content1">You are not register with findar?</string>
    <string name="oops_no_internet_connection">Oops, No internet connection!</string>
    <string name="make_sure_wifi_or_cellular_data_is_turned_on_and_that_retry">Make sure wifi or cellular data is turned on and that retry!</string>
    <string name="retry">Retry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_problems">What\'s Your Problem?</string>
    <!--    <string name="what_problem1">Which of these problems looks like the problem youre having?</string>-->
    <string name="what_problem1">Which of the problems below resembles your problem the most?</string>

    <string name="sub_problem_content">Please could you give us some more detail about the problem youre experience.</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="set_work_and_home"><![CDATA[Set Work & Home]]></string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_cpassword">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="please_select_province">Please select province</string>
    <string name="please_select_city">Please select city</string>
    <string name="please_select_suburb">Please select suburb</string>
    <string name="enter_an_order_number">Enter An Order Number</string>
    <string name="not_sure_what_an_order_number">Not sure what an order number is?</string>
    <string name="skip">Skip</string>
    <string name="add_some_photos">Add Some Photos</string>
    <string name="add_photo_content">Would you like to add some photos of the problem you\'re experiencing?</string>
    <string name="photos_you_have_added">Photos you have added</string>
    <string name="take_picture">Take a picture</string>
    <string name="photos_left">5 photos left</string>
    <string name="messagePhoto">Only allowed 5 images</string>

    <string name="home_message">Where would you like your service provider to go?</string>
    <string name="text_address">Your Address</string>
    <string name="text_setAddress">Set Address</string>
    <string name="error_address">Please choose Address</string>
    <string name="potentialString">Potential Job</string>
    <string name="yourjobString">Your Jobs</string>

    <string name="companyname">Company Name</string>
    <string name="callout">Call Out</string>
    <string name="perhour">Per Hour</string>
    <string name="time">Time</string>
    <string name="available">Available</string>
    <string name="datetime">Date &amp; Time</string>

    <string name="detail">Detail</string>
    <string name="status">Status</string>
    <string name="services">Services</string>
    <string name="punctuality">Punctuality</string>
    <string name="friendliness">Friendliness</string>
    <string name="aboutus">About Us</string>
    <string name="specialisations">Specialisations</string>
    <string name="customersay">What Our Customers Have To Say</string>
    <string name="spec">1. Bathroom Faucets \n 2. Tub and Shower Faucets \n 3. Kitchen Faucets \n 4. Garbage Disposals \n 5. Water Leak Detectors</string>
    <string name="booknow">Book Now</string>
    <string name="bookmessage">Are you sure you want \n to book this service provider?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="cancelrequest">Cancel Request</string>
    <string name="title_activity_job_information">JobInformation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="jobinfo">Job Information</string>
    <string name="location">Location</string>
    <string name="problem">Problem</string>
    <string name="description">Description</string>
    <string name="images">Images</string>
    <string name="trackorder">Track Order</string>
    <string name="cancel">Cancel</string>

    <string name="cancelMsg">You may be liable for a call out fee as your service provider is already on route to your location.</string>
    <string name="cancelTitle">Are you sure you want to cancel this job?</string>
    <string name="nothanks">No Thanks</string>
    <string name="reasonTitle">Please could you give us a reason for cancelling?</string>
    <string name="text_message">Write your message here...</string>
    <string name="chatError">Please enter message</string>

    <string name="timer">Timer</string>
    <string name="workflow">Work Flow</string>
    <string name="you">You</string>
    <string name="serviceprovider">Service Provider</string>
    <string name="cocnumber">The COC Number</string>
    <string name="jobnotes">Notes about the job</string>
    <string name="error_message_phone">Contact Number is not available</string>

    <string name="error_image">Please Update your Profile Image</string>
    <string name="version">Version</string>

    <string name="textLocation">Your Location</string>
    <string name="text_estimatetime">Estimated Time</string>
    <string name="text_distance">Distance</string>
    <string name="text_trackorder">Track Order</string>

    <string name="fcm_token">FCM TOCKEN</string>

</resources>