<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="org.findar.user.Activity.Service_Types_Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/settings"
                android:textColor="@color/black_find"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginBottom="?actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/txt_s_change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            style="@style/TextviewStyle_Setting"
            />
        <TextView
            android:id="@+id/txt_s_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/terms_and_condition"
            style="@style/TextviewStyle_Setting"
            />
            <TextView
                android:id="@+id/txt_s_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                style="@style/TextviewStyle_Setting" />
            <TextView
                android:id="@+id/txt_s_legal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legal"
                style="@style/TextviewStyle_Setting"/>
            <TextView
                android:id="@+id/txt_s_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                style="@style/TextviewStyle_Setting"/>
            <TextView
                android:id="@+id/txt_s_set_home_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_work_and_home"
                android:visibility="gone"
                style="@style/TextviewStyle_Setting"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/black_find"
        app:itemTextColor="@color/black_find"
        app:menu="@menu/drawer_menu" >
        <include layout="@layout/drawer_logout"></include>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>