<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="org.findar.user.Activity.LoginActivity">

    <include layout="@layout/header"
        android:id="@+id/back_arrow">
    </include>

<!--    <ImageView-->
<!--        android:id="@+id/back_arrow"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/back_arrow"-->
<!--        android:layout_margin="30dp"/>-->

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/gilroy_medium"
        android:layout_below="@+id/back_arrow"
        android:textColor="@color/black_find"
        android:textSize="@dimen/titleLargeSize"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/txt_login_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_content"
        android:fontFamily="@font/gilroy_medium"
        android:layout_below="@+id/txt_welcome"
        android:textColor="@color/black_find"
        android:alpha="0.4"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:fontFamily="@font/gilroy_medium"
        android:layout_below="@+id/txt_login_content"
        android:background="@drawable/edittext_border"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:textSize="@dimen/editSize"
        android:textColor="@color/black_find"
        android:textColorHint="@color/black_find1"
        android:text="kanagadurga@gmail.com"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:fontFamily="@font/gilroy_medium"
        android:layout_below="@+id/et_username"
        android:background="@drawable/edittext_border"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/editSize"
        android:textColor="@color/black_find"
        android:textColorHint="@color/black_find1"
        android:inputType="textPassword"
        android:text="test@123"/>

    <ImageView
        android:id="@+id/eye_icon"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:src="@drawable/pass_icon"
        android:layout_below="@+id/et_username"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="40dp"
        android:background="@drawable/circle_border"
        android:padding="5dp"
        android:layout_marginTop="30sp"
        />

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="@font/gilroy_bold"
        android:layout_below="@+id/et_password"
        android:textColor="@color/black_find"
        android:textSize="@dimen/labelLargeSize"
        android:layout_margin="20dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/gilroy_bold"
        android:layout_below="@+id/txt_forgot_password"
        android:textAlignment="center"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="@dimen/buttonsize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_content1"
        android:fontFamily="@font/gilroy_medium"
        android:layout_above="@+id/create_an_account"
        android:textColor="@color/black_find"
        android:alpha="0.4"
        android:textSize="17dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/create_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:fontFamily="@font/gilroy_medium"
        android:textColor="@color/primary_color"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/labelLargeSize"/>

</RelativeLayout>