<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.findar.user.Activity.RoughActivity">

    <RelativeLayout
        android:id="@+id/RL_terms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">



        <TextView
            android:id="@+id/txt_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/terms_and_condition"
            android:textColor="@color/black_find"
            android:textSize="@dimen/labelLargeSize" />

        <TextView
            android:id="@+id/txt_terms_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_terms"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:alpha="0.4"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/terms_content"
            android:textColor="@color/black_find"
            android:textSize="15dp" />

        <RelativeLayout
            android:id="@+id/RL_terms1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_terms_content"
            android:layout_margin="20dp"
            android:layout_above="@+id/txt_terms_continue"
            android:background="@drawable/terms_background"
            android:padding="20dp">

            <TextView
                android:id="@+id/txt_terms_content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/terms_content1"
                android:textColor="@color/black_find"
                android:lineSpacingExtra="10dp"
                android:textSize="@dimen/labelSize" />

            <TextView
                android:id="@+id/txt_terms_content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_terms_content1"
                android:layout_marginTop="15dp"
                android:alpha="0.6"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/terms_content2"
                android:textColor="@color/black_find"
                android:lineSpacingExtra="10dp"
                android:textSize="@dimen/labelSize" />

            <TextView
                android:id="@+id/txt_terms_content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_terms_content2"
                android:layout_marginTop="15dp"
                android:alpha="0.6"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/readmore"
                android:textColor="@color/primary_color"
                android:textSize="20dp" />



        </RelativeLayout>

        <TextView
            android:id="@+id/txt_terms_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/gilroy_bold"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/continue_"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/buttonsize" />
    </RelativeLayout>

</RelativeLayout>

