<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="org.findar.user.Activity.SubProblemsActivity">
<!--    <ImageView-->
<!--        android:id="@+id/back_arrow"-->
<!--        android:layout_width="55dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:src="@drawable/back_arrow"-->
<!--        android:padding="18dp"-->
<!--        android:layout_margin="20dp"-->
<!--        android:background="@drawable/circle_bg_white"-->
<!--        tools:ignore="ContentDescription" />-->

    <include layout="@layout/header"
        android:id="@+id/back_arrow">
    </include>
    <TextView
        android:layout_below="@+id/back_arrow"
        android:id="@+id/txt_describe_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/describe_problem"
        android:textColor="@color/black_find"
        android:textSize="30sp" />

    <TextView
        android:layout_below="@+id/txt_describe_problem"
        android:id="@+id/txt_signup_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:lineSpacingExtra="8dp"
        android:alpha="0.4"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/describe_problem_content"
        android:textColor="@color/black_find"
        android:textSize="15sp" />

    <ScrollView
        android:id="@+id/recycleViewDescribe_problem_SCRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_below="@+id/txt_signup_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/get_txt_sub_problem"
            android:fontFamily="@font/gilroy_medium"
            android:textColor="@color/black_find"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_describe_detail_problem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border_white_bg"
            android:fontFamily="@font/gilroy_medium"
            android:padding="20dp"
            android:textColor="@color/black_find"
            android:textColorHint="@color/black_find1"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollHorizontally="false"
            android:textSize="18sp"
            tools:ignore="Autofill,LabelFor,TextFields" />

            <EditText
                android:id="@+id/txt_enter_order_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/terms_background"
                android:fontFamily="@font/gilroy_medium"
                android:hint="@string/enter_an_order_number"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black_find"
                android:textSize="@dimen/labelSize" />

            <TextView
                android:id="@+id/textViewOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:textColor="@color/black_find"
                android:alpha="0.4"
                android:textAlignment="center"
                android:text="@string/not_sure_what_an_order_number"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/txt_describe_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/gilroy_bold"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/continue_"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonsize" />
            <TextView
                android:id="@+id/describe_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/primary_color"
               android:padding="20dp"
                android:textAlignment="center"

                android:textSize="@dimen/buttonsize"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>